# PandemicModel

./: .gitignore  MANIFEST.in  MasterController.py  README.md  convertToJSON.js  data.json  deploy.sh  facilitiesgeolocation.rtf  file.json  index.js  masterControl.py  package-lock.json  package.json  person.py  population.py  requirements.txt  setup.py  transmissions.py
Sim/: README.md  pyproject.toml
Sim/api/: app.py  covid_ui.py  tempCodeRunnerFile.py
Sim/src/: __init__.py
Sim/src/Delineo_Simulation/: master.py  person.py
Sim/src/Delineo_Simulation/data/: README.md
Sim/src/Delineo_Simulation/synthpops/data/demographics/contact_matrices_152_countries/usa/Oklahoma/age_distributions/: age_gender_labels.txt
Sim/src/Delineo_Simulation/synthpops/synthpops/: api.py  contacts.py  household.py
Sim/src/simulation/synthpops/tests/: test_synthpops.py
Sim/tests/: runnner.py  testscript.py
api/: app.py  covid_ui.py
d3charts/: D3LineChart.js
data_processing/: convertCountyDemToJSON.js  convertToJSON.js  countyFIPS.js  date.js  package-lock.json  package.json
docs/: README.md
model_app/: README.md  package-lock.json  package.json
servers/: index.html  index.js  server.js  servers.txt  simulator.js  test.py  website.js
sim/: MANIFEST.in  setup.py
simulation/: Anytown_Jan06_fullweek_dict.pkl  ValueController.py  WellsRileyTester.py  apicontroller.py  core_poi_OKCity.csv  covid_ui.py  db.py  displayData.py  dummy.json  facilites_info.txt  facilites_info_formatted.txt  file.txt  getRequestAPI.py  master.py  module.py  output.txt  person.py  phasePlan.py  (+7 more)
(+385 files in other folders)
